[iOS] Add exclusive touch to toolbar buttons

This CL enables the exclusive touch on the toolbar buttons. It won't
be possible to do two actions at the same time including a button.

Bug: 878348
Cq-Include-Trybots: luci.chromium.try:ios-simulator-cronet;luci.chromium.try:ios-simulator-full-configs
Change-Id: I2a2e6f93cc42731ccd0d5730464cf0eb1ceca278
Reviewed-on: https://chromium-review.googlesource.com/1219487
Reviewed-by: Olivier Robin <olivierrobin@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590278}