ios/chrome/browser/ui/toolbar/buttons/toolbar_button_factory.mm
@@ -494,6 +494,7 @@ const int styleCount = 2;
   constraint.active = YES;
   if (IsUIRefreshPhase1Enabled()) {
     button.configuration = self.toolbarConfiguration;
+    button.exclusiveTouch = YES;
   }
 }
 
